--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vue-app",
+    "name": "xkcd-fan",
     "version": "1.0.0",
     "description": "Messing around with Vue",
     "author": "Noah May <noahmouse2011@gmail.com>",
@@ -11,7 +11,7 @@
         "client": "npm run client:watch",
         "client:watch": "webpack-dev-server --inline --progress --config-name client --config build/webpack.dev.conf.js",
         "server": "npm-run-all -p server:*",
-        "server:start": "sleep 3 && nodemon",
+        "server:start": "sleep 3 && nodemon -i src/client/",
         "server:watch": "npx webpack -w --config-name server --config build/webpack.dev.conf.js",
         "unit": "jest --config test/unit/jest.conf.js --coverage",
         "test": "npm run unit",
@@ -21,17 +21,20 @@
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.1",
         "@types/isomorphic-fetch": "^0.0.35",
+        "@types/morgan": "^1.7.37",
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "^2.0.4",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "isomorphic-fetch": "^2.2.1",
+        "morgan": "^1.9.1",
         "nodemon": "^1.19.4",
         "npm-run-all": "^4.1.5",
         "ts-loader": "3",
         "typescript": "^3.6.4",
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
+        "vuex": "^3.1.1",
         "webpack-node-externals": "^1.7.2"
     },
     "devDependencies": {
