--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "lint": "eslint --ext .js,.vue src test/unit"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.25",
+        "@fortawesome/free-solid-svg-icons": "^5.11.2",
+        "@fortawesome/vue-fontawesome": "^0.1.7",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.1",
         "@types/isomorphic-fetch": "^0.0.35",
