--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "ts-loader": "3",
         "typescript": "^3.6.4",
         "vue": "^2.5.2",
+        "vue-infinite-loading": "^2.4.4",
         "vue-router": "^3.0.1",
         "vuex": "^3.1.1",
         "webpack-node-externals": "^1.7.2"
