Hopefully fixed copying to clipboard

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/morgan": "^1.7.37",
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "^2.0.4",
+        "clipboard-polyfill": "^2.8.6",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "isomorphic-fetch": "^2.2.1",
